# rattlesnake-vibration-controller

./: .gitignore  MANIFEST.in  README.md  index.html  pylint_badge_color.py  pylint_output_20250729_150018_UTC.txt  pylint_report.py  pyproject.toml  rattlesnake.py  requirements.txt  requirements_deprecated.txt  test_pylint_report.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/ISSUE_TEMPLATE/workflows/: main.yml
.github/workflows/: main.yml  pylint.yml  pytest.yml
badges/: coverage-info.json  pylint-info.json
components/: abstract_control_law.py  abstract_environment.py  abstract_nonlinear_integrator.py  abstract_sysid_data_analysis.py  abstract_sysid_environment.py  acquisition.py  combined_environments_controller.ui  cpsd_computation.py  data_physics_hardware.py  data_physics_interface.py  environment_selector.ui  environments.py  exodus_modal_solution_hardware.py  frf_computation.py  generic_system_id_signal_generation.py  lanxi_hardware_multiprocessing.py  lanxi_stream.py  modal_acquisition_window.ui  nidaqmx_hardware_multitask.py  nonlinear_ivp_virtual_hardware.py  output.py  random_vibration_data_analysis.py  random_vibration_data_collector.py  random_vibration_definition.ui  random_vibration_environment.py  random_vibration_prediction.ui  random_vibration_run.ui  random_vibration_signal_generation.py  random_vibration_sys_id_data_analysis.py  random_vibration_sys_id_environment.py  random_vibration_sys_id_utilities.py  sdynpy_system_virtual_hardware.py  signal_generation.py  spectral_processing.py  state_space_virtual_hardware.py  streaming.py  system_id_signal_generation.py  system_identification.ui  time_definition.ui  time_environment.py  (+10 more)
control_laws/: buzz_class.py  buzz_function.py  buzz_generator.py  buzz_pseudoinverse_control.py  buzz_shape_constraint.py  control_laws.py  matlab_control_law.m  matlab_interface.py  pseudoinverse_control.py  schultz.py  transient_control_laws.py
reports/coverage/: index.html
reports/pylint/: index.html
src/rattlesnake/: __init__.py  hello.py  pylint_badge_color.py  rattlesnake.py
src/rattlesnake/cicd/: pylint_report.py
src/rattlesnake/components/: __init__.py  abstract_hardware.py  abstract_message_process.py  acquisition.py  control_select.ui  data_collector.py  data_physics_interface.py  environments.py  lanxi_hardware_multiprocessing.py  modal_definition.ui  modal_environment.py  modal_run.ui  nidaqmx_hardware_multitask.py  random_vibration_prediction.ui  random_vibration_sys_id_environment.py  random_vibration_sys_id_utilities.py  (+13 more)
tests/: test_hello.py  test_pylint_report.py
